--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">Super Hero App</string>
+    <string name="status_alive">Status: Alive</string>
+    <string name="status_dead">Status: Dead</string>
+    <string name="status_unknown">Status: Unknown</string>
+    <string name="character_name_with_position">#%1$d - %2$s</string>
+    <string name="character_gender">Gender: %1$s</string>
+    <string name="character_type">Type: %1$s</string>
+    <string name="character_location">Location: %1$s</string>
+    <string name="view_info">View Info</string>
+    <string name="location">Location</string>
+    <string name="episodes">Episodes</string>
 </resources>
