--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,10 @@
 <resources>
     <string name="app_name">Super Hero App</string>
-    <string name="status_alive">Status: Alive</string>
-    <string name="status_dead">Status: Dead</string>
-    <string name="status_unknown">Status: Unknown</string>
-    <string name="character_name_with_position">#%1$d - %2$s</string>
-    <string name="character_gender">Gender: %1$s</string>
-    <string name="character_type">Type: %1$s</string>
-    <string name="character_location">Location: %1$s</string>
-    <string name="view_info">View Info</string>
-    <string name="location">Location</string>
-    <string name="episodes">Episodes</string>
+    <string name="superhero_name_with_position">#%1$d - %2$s</string>
+    <string name="superhero_alter_name">Alter name: %1$s</string>
+    <string name="superhero_enemy">Main enemy: %1$s</string>
+    <string name="superhero_locations">Location: %1$s</string>
+    <string name="superhero_powers">Powers: %1$s</string>
+    <string name="view_enemies">View Enemies</string>
+    <string name="view_friends">View Friends</string>
 </resources>
